ribbon 5 review init